Fix text overlapping with image in Reorder question. Close #251.

--- a/meteor/imports/styles/partials/_page.scss
+++ b/meteor/imports/styles/partials/_page.scss
@@ -270,6 +270,10 @@
     font-style: italic;
     padding-left: 10px;
   }
+
+  & > .post {
+    width: 100%;
+  }
 }
 
 .post-tagged {
